# SimpleCube

./: .gitignore  CMakeLists.txt  Image.h  Matrix3x3.h  Matrix4x4.h  MyPainter.cpp  MyPainter.h  PointLight.cpp  PointLight.h  PrimitivePainter.cpp  PrimitivePainter.h  QtGui.pro  README.md  ViewMatrix.cpp  ViewMatrix.h  geometry.cpp  geometry.h  mainwindow.cpp  mainwindow.h  model.cpp  model.h
